--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "dependencies": {
     "ethers": "6.2.3",
     "fs-extra": "^11.1.1",
+    "ganache": "^7.9.0",
     "solc": "0.8.7-fixed"
+  },
+  "scripts": {
+    "compile": "solcjs --bin --abi --include-path node_modules/ --base-path . -o . SimpleStorage.sol"
   }
 }
