--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "ethers": "6.2.3",
     "fs-extra": "^11.1.1",
     "ganache": "^7.9.0",
+    "prettier": "^3.0.0",
+    "prettier-plugin-solidity": "^1.1.3",
     "solc": "0.8.7-fixed"
   },
   "scripts": {
